Fix sortable on mobile

--- a/src/components/ListItemSummaryLine/ListItemSummaryLine.module.css
+++ b/src/components/ListItemSummaryLine/ListItemSummaryLine.module.css
@@ -21,7 +21,7 @@
 .nameLine {
   flex: 1;
   width: 0%;
-  max-width: 400px;
+  max-width: 240px;
   display: flex;
   align-items: center;
   margin-right: auto;
