--- a/src/components/SortableListItems/SortableListItems.module.css
+++ b/src/components/SortableListItems/SortableListItems.module.css
@@ -4,4 +4,5 @@
 
 .activeItem {
   cursor: grab;
+  max-width: 80%;
 }
